# f1tenth_gym_jax

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker.yml  lint.yml
docs/: Doxyfile  basic_usage.rst  conf.py  customized_usage.rst  dynamics.rst  index.rst  installation.rst  make.bat  reproduce.rst  visualization.rst
docs/api/: collision_models.rst  dynamic_models.rst  env.rst  index.rst  integrator.rst  multi_agent_env.rst  registration.rst  rendering.rst  spaces.rst  track.rst  utils.rst
examples/: benchmark_example.ipynb  eval_ppo_example.py  example.ipynb  mppi_example.ipynb  mppi_example.py  ppo_example.py  pyqt_test.ipynb  random_trackgen.py  render_dashboard.py  rendering_example.ipynb  run_in_empty_track.py  train_ppo_example.py  video_recording.py  waypoint_follow.py
f1tenth_gym_jax/: __init__.py  registration.py
f1tenth_gym_jax/envs/: __init__.py  base_classes.py  collision_models.py  dynamic_models.py  f110_env.py  integrator.py  laser_models.py  multi_agent_env.py  rewards.py  spaces.py  utils.py
f1tenth_gym_jax/envs/rendering/: __init__.py  objects.py  renderer.py  traj_renderer.py
f1tenth_gym_jax/envs/track/: __init__.py  cubic_spline.py  track.py  utils.py
tests/: test_collision_checks.py  test_cubic_spline.py  test_dynamics.py  test_examples.py  test_f110_env.py  test_metadata.py  test_observation.py  test_registration.py  test_renderer.py  test_scan_sim.py  test_spaces.py  test_track.py  test_utils.py
trained_models_ppo/gaussianactor/: Spielberg_1_scan_collision_progress+alive_v0_actor_params.safetensors  Spielberg_1_scan_collision_progress+alive_v0_critic_params.safetensors  Spielberg_1_scan_collision_progress+alive_velocity+steeringangle_v0_actor_params.safetensors  Spielberg_1_scan_collision_progress+alive_velocity+steeringangle_v0_critic_params.safetensors
trained_models_ppo/gaussianactor_ratio10/: Spielberg_1_scan_collision_progress+alive_velocity+steeringangle_10_v0_actor_params.safetensors  Spielberg_1_scan_collision_progress+alive_velocity+steeringangle_10_v0_critic_params.safetensors
