[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra"
testpaths = ["tests", "integration"]


[tool.poetry]
name = "f1tenth_gym_jax"
version = "1.0.0dev"
description = "Gym environment for F1TENTH"
license = "MIT"
authors = [
    "Hongrui Zheng",
    "Renukanandan Tumu",
    "Luigi Berducci",
    "Ahmad Amine",
    "Zirui Zang",
    "Joseph Auckley",
    "Matthew O'Kelly",
    "Aman Sinha",
]
maintainers = ["Hongrui Zheng"]
readme = "README.md"
homepage = "https://f1tenth.org"
repository = "https://github.com/f1tenth/f1tenth_gym_jax"
documentation = "https://f1tenth-gym.readthedocs.io/en/latest/"
packages = [{ include = "f1tenth_gym_jax" }]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.2"
requests = "^2.32.4"
jax = {extras = ["cuda12"], version = "^0.6.2"}
jax-pf = {git = "https://github.com/hzheng40/jax_pf.git"}
flax = "^0.10.6"
chex = "^0.1.89"
pyqtgraph = "^0.13.7"
pyqt6 = "^6.9.1"
pyopengl = "^3.1.9"
pillow = "^11.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
ipykernel = "^6.29.0"
isort = "^5.13.2"
autoflake = "^2.2.1"
matplotlib = "^3.8.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
